# FastAPI-Board

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
schemas/: base.py  post.py
